--- a/css/styles.css
+++ b/css/styles.css
@@ -3,20 +3,6 @@
 }
 html{
     font-size: 62.5%;
-    height: 100vh;
-    width: 100vw;
-    box-sizing: border-box;
-    background-image: url(../img/morado.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow-x: hidden;
-    overflow-y: auto;
-
 }
 *, *:before, *:after {
     box-sizing: inherit;
@@ -36,12 +22,16 @@ html{
 body{
     font-size: 2rem;
     font-family: 'Overpass', sans-serif;
+    box-sizing: border-box;
+    background-image: url(../img/morado.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
 }
 .contenedor{
-    margin-top: 3rem;
-    padding-top: 3rem;
-    Min-height: 95vh;
-    Min-width: 95vw;
+    margin: 2rem auto;
+    width: 92.5%;
     background-color: rgba(255, 255, 255, 0.25);
     border-radius: 21px;
     box-shadow: 0 19px 38px rgba(128, 128, 128, 0.3), 0 15px 12px rgba(128, 128, 128, 0.3);
@@ -52,14 +42,14 @@ body{
     flex-direction: column; 
     align-items: center;
     margin-bottom: 3rem;
-    padding-bottom: 3rem;
+    padding: 3rem;
 }
 @media (min-width: 830px) {
     .contenedor-botones{
         flex-direction: row;
         justify-content: center;
         margin-bottom: 3rem;
-        padding-bottom: 3rem;
+        padding: 3rem;
     }
 }
 .boton{
